--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@ group 'com.spring.inaction'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'war'
+
 
 sourceCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -14,6 +17,12 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-core', version: '5.1.4.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '5.1.4.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '5.1.4.RELEASE'
+
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.4.RELEASE'
+    compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.11.RELEASE'
+    compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.3.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
     compile group: 'org.springframework', name: 'spring-tx', version: '5.1.4.RELEASE'
 
