--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.4.RELEASE'
+
 }
