--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.3.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    testCompileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
     compile group: 'org.springframework', name: 'spring-tx', version: '5.1.4.RELEASE'
 
@@ -38,6 +39,8 @@ dependencies {
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.4.RELEASE'
+    //testCompile group: 'org.springframework', name: 'spring-test-mvc', version: '1.0.0.m2'
 
 }
